--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -15,15 +15,15 @@ body {
 
 .herolist {
   overflow: auto;
-  height: 500px;
+  height: 800px;
   padding-left: 5px;
 }
 
-.herolist li.hero {
+.herolist li {
     list-style: none;
 }
 
-.herolist li.hero:hover {
+.herolist li:hover {
     background-color: #A0A5B1;
     cursor: pointer;
      -webkit-transition: background-color 500ms linear;
@@ -35,6 +35,10 @@ body {
 
 .inline li {
     display: inline;
+}
+
+.inline-block li {
+    display: inline-block;
 }
 
 
@@ -50,59 +54,119 @@ body {
 }
 
 #versusMap {
-  left: 220px;
+  left: 200px;
   right: 0;
-  width: 1100px;
+  width: 1200px;
 }
 
+.selectedHeroes {
+  padding: 10px;
+  margin-bottom: 50px;
+}
 
-
-#versusMap .hero {
+.hero {
   width: 200px;
   height: 240px;
-  float: left;
-  margin: 50px 0px 30px 20px;
+  position: relative;
+  border: 1px solid;
 }
 
-#versusMap .hero > .name {
+.hero > .name {
+  position: absolute;
   font-weight: bold;
-  padding: 2px 0px 0px 2px;
+  top: 2px;
+  left: 4px;
+  z-index: 1;
 }
 
-.portrait img {
+.hero .portrait img {
   width: 200px;
+  position: absolute;
   height: 240px;
   border: 1px solid #888888;
   border-radius: 3px;
-  box-shadow: 3px 3px 1px #888888;
+  box-shadow: 2px 2px 1px #888888;
 }
 
-.roles {
-  position: relative;
-  float: right;
-  top: -280px;
+.hero .roles {
+  position: absolute;
+  top: 30px;
+  left: -15px;
   text-align: center;
   color: white;
 }
 
-.roles div {
-  width: 20px;
-  height: 20px;
-  border: 1px dotted white;
+
+.abilities {
+  left: 10px;
+  position: absolute;
+  top: 215px;
 }
 
-.skills {
-  left: -24px;
-  position: relative;
-  width: 220px;
-  bottom: 30px;
-}
-.skilllist li {
-  display: inline;
+.abilities .ability {
+  padding: 2px;
+  display: inline-block;
 }
 
-.skilllist img {
+.abilities .ability img {
   width: 40px;
   height: 40px;
   border: 1px solid white;
+}
+
+.ability .ability-details {
+  display: none;
+  width: 300px;
+  padding: 5px;
+
+  border-radius: 5px;
+  color: #999999;
+  background-color: black;
+  z-index: 2;
+  position: absolute;
+}
+
+.ability .ability-details .name{
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.ability:hover {
+  cursor: pointer;
+}
+
+.ability:hover .ability-details {
+  display: block;
+}
+
+.ability-details:hover {
+  display: none;
+}
+
+
+.role .role-details {
+  display: none;
+}
+
+.role:hover {
+  cursor: pointer;
+}
+
+.role-details:hover {
+  display:none;
+}
+
+.role:hover .role-details {
+  position: absolute;
+  display: block;
+  z-index: 1;
+  color: black;
+  width: 80px;
+  height: 20px;
+  border: 1px solid black;
+  background-color: white;
+}
+
+.attribVal {
+    color: #ffffff;
 }
